[system/cilium] Enable topology-aware routing for services
Signed-off-by: nbykov0 <166552198+nbykov0@users.noreply.github.com>

--- a/packages/system/cilium/values.yaml
+++ b/packages/system/cilium/values.yaml
@@ -10,6 +10,7 @@ cilium:
     enabled: true
   loadBalancer:
     algorithm: maglev
+    serviceTopology: true
   ipam:
     mode: "kubernetes"
   image:
